# waiting-room

./: .gitignore  Cargo.toml  README.md  config.toml  start.sh  status.sh  stop.sh
admin/: README.md  package-lock.json  package.json
admin/src/: App.tsx  api.ts
admin/src/components/: Layout.tsx  QueueVisualizer.tsx  Schedules.tsx  Settings.tsx  StatsCards.tsx  StatusBadge.tsx
admin/src/hooks/: usePolling.ts
admin/src/pages/: Dashboard.tsx  Login.tsx  SchedulesPage.tsx
docs/: 01-design.md  02-implementation.md  03-testing.md  04-qna.md  05-comparison.md  06-design-review.md  presentation.html  presentation.md
examples/: bench.rs  bench_multi.rs  origin.rs
src/: admin.rs  archive_store.rs  backend.rs  config.rs  main.rs  middleware.rs  proxy.rs  pubsub.rs  queue.rs  reaper.rs  redis_backend.rs  schedule_store.rs  scheduler.rs  session.rs  state.rs  waiting.rs
src/templates/: waiting.html
tests/: load_test.sh  monitor.sh  run_conn_test.sh  run_load_test.sh  stress_test.sh
tools/: conn_test.rs  load_test.rs
