[package]
name = "waiting-room"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
parking_lot = "0.12"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
rand = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
deadpool-redis = "0.18"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["cookies", "json"] }
